change styles more user-friendly

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-light navbar-light">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand">For You</a>
+                <a href="index.html" class="navbar-brand">Welcome</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -59,13 +59,14 @@
                     <div class="col-sm-12 col-md-6">
                         <div class="hero-content">
                             <div class="hero-text">
-                                <p>I'm</p>
-                                <h1>Felix Wang</h1>
+                                <!-- <p>I'm</p> -->
+                                <h1>Felix Arnold</h1>
                                 <h2></h2>
-                                <div class="typed-text">Web Developer, Blockchain Developer, Smart Contract Engineer, Lead Developer</div>
+                                <!-- <div class="typed-text">Web Developer, Blockchain Developer, Smart Contract Engineer, Lead Developer</div> -->
+                                <div class="typed-text">Senior Full Stack Engineer</div>
                             </div>
                             <div class="hero-btn">
-                                <a class="btn" href="https://github.com/luckyturtle" target="_blank">View on GitHub</a>
+                                <a class="btn" href="https://github.com/felicehoc-elite" target="_blank">View on GitHub</a>
                             </div>
                         </div>
                     </div>
@@ -92,7 +93,7 @@
                         <div class="about-content">
                             <div class="section-header text-left">
                                 <p>Learn About Me</p>
-                                <h2>9 Years Experience</h2>
+                                <h2>7 Years Of Experience</h2>
                             </div>
                             <div class="about-text">
                                 <p>
@@ -120,10 +121,10 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>Django</p><p>70%</p>
+                                    <p>Python/Django</p><p>99%</p>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
                                     <p>Typescript</p><p>85%</p>
@@ -261,38 +262,42 @@
                 <div class="timeline">
                     <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">2017 - 2021</div>
-                            <h2>Full stack Developer</h2>
-                            <h4>SEVEN DYNAMIC, Hamilton CA</h4>
-                            <p>▪ Identified web-based user interactions and developed highly responsive user interface components via React concepts.</p>
-                            <p>▪ Translated designs and wireframes into high-quality code and wrote application interface code via JavaScript following Vue workflows.</p>
-                            <p>▪ Optimized components for maximum performance on a wide range of web-capable devices and browsers.</p>
+                            <div class="timeline-date">2020 - now</div>
+                            <h2>Senior Software Engineer</h2>
+                            <h4>Freelancer, Romania</h4>
+                            <p>▪ Develop websites for NFT marketplace, education and booking sites communicating with 30+ clients to identify their needs & goals and work on meeting them.</p>
+                            <p>▪ Create and integrate APIs, database model, and views using Python and build responsive web page applications acquiring a 90% responsiveness rate upon completion using Next.js.</p>
+                            <p>▪ Implement 10+ test cases for frontend (React, Vue) and backend (Django) using Jest, Unittest and Pytest frameworks.</p>
+                            <P>▪ Review code quality and efficiency of others and troubleshoot complicated issues regarding server response time and so on.</P>
                             <p>▪ Ethereum voting app using blockchain concept based on smart contract.</p>
                         </div>
                     </div>
                     <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">2015 - 2017</div>
-                            <h2>Front-End Web Developer</h2>
-                            <h4>COGINI HONG KONG LIMITED, Harbour Hong Kong</h4>
+                            <div class="timeline-date">2018 - 2020</div>
+                            <h2>Senior Full Stack Developer</h2>
+                            <h4>INFOC, Singapore</h4>
+                            <p style="text-align:left; padding: 10px;">▪ Manage website development projects from scratch, optimizing all cross-browser and multi-platform compatibility.</p>
                             <p style="text-align:left; padding: 10px;">▪ Collaborated with designers to create and deliver responsive, cross-browser compatible, and accessibility compliant websites, achieving 19% faster load time than the industry average.</p>
                             <p style="text-align:left; padding: 10px;">▪ Developed the latest user-facing features using React.js and built reusable components & front-end libraries for future use.</p>
+                            <p style="text-align:left; padding: 10px;">▪ Carry out quality assurance tests to discover errors, fix bugs and optimize usability for corporate clients.</p>
                         </div>
                     </div>
                     <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">2013 - 2015</div>
-                            <h2>Software Developer</h2>
-                            <h4>MIOTECH, Sheng Wan Hong Kong</h4>
-                            <p style="text-align:right; padding: 10px;">▪ Manage large, complex design projects for corporate clients.</p>
-                            <p style="text-align:right; padding: 10px;">▪ Develop project concepts, maintain optimal workflow, and participated in Feasibility analysis.</p>
+                            <div class="timeline-date">2016 - 2018</div>
+                            <h2>Junior Web Developer</h2>
+                            <h4>systemsGo, Singapore</h4>
+                            <p style="text-align:right; padding: 10px;">▪ Developed and maintained cutting-edge web applications using React, Redux, TypeScript, and responsive design principles, resulting in increased user engagement and improved website performance.</p>
+                            <p style="text-align:right; padding: 10px;">▪ Utilized Tailwind CSS to create visually appealing and responsive user interfaces, improving the overall design consistency and user experience.</p>
+                            <p style="text-align:right; padding: 10px;">▪ Collaborated with product managers, UI/UX designers, and back-end developers to deliver cohesive and well-implemented features, ensuring smooth end-to-end product delivery.</p>
                         </div>
                     </div>
                     <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">2011 - 2013</div>
-                            <h2>Get Bachelar</h2>
-                            <h4>The Open University of Hong Kong</h4>
+                            <div class="timeline-date">2012 - 2016</div>
+                            <h2>Bachelar of Computer Science</h2>
+                            <h4>Singapore University of Technology and Design (SUTD)</h4>
                             <p>Be educated on C/C++/Assemble/Java/QT.</p>
                             <p>This is the begin of my IT career. </p>
                         </div>
@@ -312,7 +317,7 @@
                 </div>
                 <div class="container banner-text">
                     <p>
-                        Once your start-up or venture plan company launch business manipulated by me, I provide you 2 months of free support benefit.
+                        Once your start-up or venture plan company launch business manipulated by me, I provide you 1 months of free support benefit.
                         Especially welcome for cryptocurrency business based on blockchain concept and I love it.
                     </p>
                     <p> Don't be hesitate to make a deal ! </p>
@@ -696,7 +701,7 @@
                                     Immediate result summary allows anyone with metamask wallet to view the result statistics ensuring ultimate transparency.
                                     We recommend this app highly.
                                 </p>
-                                <a class="btn" href="https://nepalvotes.info">View Product<i class="fa fa-angle-right"></i></a>
+                                <!-- <a class="btn" href="https://nepalvotes.info">View Product<i class="fa fa-angle-right"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -769,11 +774,11 @@
             <div class="container-fluid">
                 <div class="container">
                     <div class="footer-info">
-                        <h2>Felix Wang</h2>
-                        <h3>Beaverton, Oregon, United States</h3>
+                        <h2>Felix Arnold</h2>
+                        <h3>Strada Bârlea 17, București 052034, Romania</h3>
                         <div class="footer-menu">
-                            <p>+125 42 210 567</p>
-                            <p>mianhua9999@gmail.com</p>
+                            <p>+40 765 400 434</p>
+                            <p>felicehoc.0206@gmail.com</p>
                         </div>
                         <!-- <div class="footer-social">
                             <a href=""><i class="fab fa-twitter"></i></a>
@@ -785,7 +790,7 @@
                     </div>
                 </div>
                 <div class="container copyright">
-                    <p>&copy; <a href="#">Choose Felix</a>, All Right Reserved | Designed By <a href="https://htmlcodex.com">Felix</a></p>
+                    <p>&copy; <a href="#">Choose Felix</a>, All Right Reserved | Designed By <a href="">Felix</a></p>
                 </div>
             </div>
         </div>
