change company name

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         <div class="timeline-text">
                             <div class="timeline-date">2018 - 2020</div>
                             <h2>Senior Full Stack Developer</h2>
-                            <h4>INFOC, Singapore</h4>
+                            <h4>Metric Digital, Singapore</h4>
                             <p style="text-align:left; padding: 10px;">▪ Manage website development projects from scratch, optimizing all cross-browser and multi-platform compatibility.</p>
                             <p style="text-align:left; padding: 10px;">▪ Collaborated with designers to create and deliver responsive, cross-browser compatible, and accessibility compliant websites, achieving 19% faster load time than the industry average.</p>
                             <p style="text-align:left; padding: 10px;">▪ Developed the latest user-facing features using React.js and built reusable components & front-end libraries for future use.</p>
@@ -287,7 +287,7 @@
                         <div class="timeline-text">
                             <div class="timeline-date">2016 - 2018</div>
                             <h2>Junior Web Developer</h2>
-                            <h4>systemsGo, Singapore</h4>
+                            <h4>Togglr, Singapore</h4>
                             <p style="text-align:right; padding: 10px;">▪ Developed and maintained cutting-edge web applications using React, Redux, TypeScript, and responsive design principles, resulting in increased user engagement and improved website performance.</p>
                             <p style="text-align:right; padding: 10px;">▪ Utilized Tailwind CSS to create visually appealing and responsive user interfaces, improving the overall design consistency and user experience.</p>
                             <p style="text-align:right; padding: 10px;">▪ Collaborated with product managers, UI/UX designers, and back-end developers to deliver cohesive and well-implemented features, ensuring smooth end-to-end product delivery.</p>
